--- a/cloud_init.sample.cfg
+++ b/cloud_init.sample.cfg
@@ -3,8 +3,8 @@
 package_upgrade: true
 
 packages:
-  - python39.x86_64
-  - sudo
+  - python3.x86_64
+  - sudo # https://forums.rockylinux.org/t/rocky-8-6-genericcloud-no-sudo/6068
 
 users:
   - name: ansible
